Fix spacing of onCallSwitch box on desktop

--- a/src/styles/leo-provider-app.styl
+++ b/src/styles/leo-provider-app.styl
@@ -277,7 +277,8 @@
     }
 
     #dropdown-menu-status.call-switch {
-      margin-right: -210px;
+      width: 510px;
+      margin-right: -235px;
       margin-top: 7px;
     }
 
